--- a/ui/tabcast.ui
+++ b/ui/tabcast.ui
@@ -2,6 +2,7 @@
 <!-- Created with Cambalache 0.96.0 -->
 <interface>
   <!-- interface-name tabcast.ui -->
+  <requires lib="gio" version="2.0"/>
   <requires lib="gtk" version="4.18"/>
   <requires lib="libadwaita" version="1.7"/>
   <object class="AdwApplicationWindow" id="window">
@@ -15,17 +16,6 @@
         </child>
         <child>
           <object class="GtkGrid">
-            <child>
-              <object class="GtkButton" id="test-button">
-                <property name="label">button!</property>
-                <layout>
-                  <property name="column">1</property>
-                  <property name="column-span">1</property>
-                  <property name="row">1</property>
-                  <property name="row-span">1</property>
-                </layout>
-              </object>
-            </child>
             <child>
               <object class="GtkFixed">
                 <property name="hexpand">True</property>
@@ -61,9 +51,120 @@
               </object>
             </child>
             <child>
-              <object class="GtkFixed">
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
+              <object class="GtkLabel">
+                <property name="label">&lt;span font_size="25pt"&gt;Hello, world!&lt;/span&gt;</property>
+                <property name="use-markup">True</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="column-span">1</property>
+                  <property name="row">1</property>
+                  <property name="row-span">1</property>
+                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="GtkGrid" id="device-view">
+                <child>
+                  <object class="GtkListBox" id="device-list">
+                    <property name="hexpand">True</property>
+                    <child>
+                      <object class="GtkBox" id="test1">
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">computer</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label">sheep no.6 phone</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkFixed">
+                            <property name="hexpand">True</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="halign">end</property>
+                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
+                            <property name="use-markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkBox" id="test2">
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">computer</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label">sheep no.7 phone</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkFixed">
+                            <property name="hexpand">True</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="halign">end</property>
+                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
+                            <property name="use-markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkBox" id="test3">
+                        <child>
+                          <object class="GtkImage">
+                            <property name="icon-name">computer</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="label">sheep no.8 phone</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkFixed">
+                            <property name="hexpand">True</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="halign">end</property>
+                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
+                            <property name="use-markup">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <layout>
+                      <property name="column">0</property>
+                      <property name="column-span">1</property>
+                      <property name="row">1</property>
+                      <property name="row-span">1</property>
+                    </layout>
+                  </object>
+                </child>
+                <child>
+                  <object class="AdwSpinner" id="scanning-spinner">
+                    <property name="halign">start</property>
+                    <property name="valign">start</property>
+                    <layout>
+                      <property name="column">0</property>
+                      <property name="column-span">1</property>
+                      <property name="row">0</property>
+                      <property name="row-span">1</property>
+                    </layout>
+                  </object>
+                </child>
                 <layout>
                   <property name="column">1</property>
                   <property name="column-span">1</property>
@@ -74,7 +175,15 @@
             </child>
           </object>
         </child>
+        <child>
+          <object class="GtkFixed">
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
+          </object>
+        </child>
       </object>
     </property>
+    <property name="default-height">500</property>
+    <property name="title">TabCast</property>
   </object>
 </interface>
