--- a/ui/tabcast.ui
+++ b/ui/tabcast.ui
@@ -67,100 +67,20 @@
                 <child>
                   <object class="GtkListBox" id="device-list">
                     <property name="hexpand">True</property>
+                    <property name="selection-mode">none</property>
                     <child>
-                      <object class="GtkBox" id="test1">
-                        <child>
-                          <object class="GtkImage">
-                            <property name="icon-name">computer</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">sheep no.6 phone</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkFixed">
-                            <property name="hexpand">True</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="halign">end</property>
-                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
-                            <property name="use-markup">True</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkBox" id="test2">
-                        <child>
-                          <object class="GtkImage">
-                            <property name="icon-name">computer</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">sheep no.7 phone</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkFixed">
-                            <property name="hexpand">True</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="halign">end</property>
-                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
-                            <property name="use-markup">True</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkBox" id="test3">
-                        <child>
-                          <object class="GtkImage">
-                            <property name="icon-name">computer</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">sheep no.8 phone</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkFixed">
-                            <property name="hexpand">True</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="halign">end</property>
-                            <property name="label">&lt;b&gt;Connect&lt;/b&gt;</property>
-                            <property name="use-markup">True</property>
-                          </object>
-                        </child>
+                      <object class="GtkSpinner" id="scan-spinner">
+                        <property name="can-focus">False</property>
+                        <property name="can-target">False</property>
+                        <property name="focus-on-click">False</property>
+                        <property name="halign">start</property>
+                        <property name="spinning">True</property>
                       </object>
                     </child>
                     <layout>
                       <property name="column">0</property>
                       <property name="column-span">1</property>
                       <property name="row">1</property>
-                      <property name="row-span">1</property>
-                    </layout>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwSpinner" id="scanning-spinner">
-                    <property name="halign">start</property>
-                    <property name="valign">start</property>
-                    <layout>
-                      <property name="column">0</property>
-                      <property name="column-span">1</property>
-                      <property name="row">0</property>
                       <property name="row-span">1</property>
                     </layout>
                   </object>
